2006-03-21  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxywidget.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/filechooser.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/spinbutton.py:
	* kiwi/ui/widgets/textview.py:
	Rename mixins and move out of kiwi/ui/widgets/

2006-03-21  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/interfaces.py:
	* kiwi/proxies.py:
	* kiwi/ui/views.py:
	* kiwi/ui/widgets/proxy.py:
	Rename interfaces and start to document

2006-03-21  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml: 
	* tools/glade_conversor.py (filters): 
	Update to reflect renames.

	* kiwi/ui/widgets/radiobutton.py (RadioButton.__init__): Rename
	RadioButton to ProxyRadioButton.
	Add gtk.RadioButton compatible arguments to ProxyRadioButton

	* kiwi/ui/widgets/entry.py: Rename Entry to ProxyEntry

	* kiwi/ui/gazpacholoader.py (GazpachoWidgetTree.__init__): 
	Print deprecation warnings inside a glade file nicely

	* kiwi/python.py (deprecationwarn, disabledeprecationcall): New
	functions, to manage deprecation warnings

2005-12-14  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/filechooser.py:
	Add widget support for filechooserbutton and filechooserdialog.
	
2006-03-21  Johan Dahlin  <jdahlin@async.com.br>


	* kiwi/dist.py (setup): Add a distutils setup() replacement to
	simplify installation of kiwi packages.

	* kiwi/__init__.py:
	* kiwi/environ.py:
	* kiwi/log.py:
	Simplify localization for uninstalled applications. Use proper logging
	in environment

2006-03-20  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/datatypes.py:
	* tests/test_datatypes.py:
	Output a string in a locale dependent way, even if a format is not
	provided
	Fixes #2486

2006-03-20  Johan Dahlin  <jdahlin@async.com.br>
